<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinnerClass_update"
        style="@style/SpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerName_update"
        style="@style/SpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_month" />

        <TextView
            android:id="@+id/txtLastMonth_update"
            style="@style/TextViewStyle.WidthWrap.Center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:text="last Month" />

        <Button
            android:id="@+id/btnIncreaseMonth"
            style="@style/ButtonStyle.Center"
            android:layout_weight="1"
            android:text="@string/add_one" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <TextView
            android:id="@+id/txtPayDate_update"
            style="@style/TextViewStyle.WidthWrap.Center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            tools:text=" Date " />

        <Button
            android:id="@+id/btnShowCalender"
            style="@style/ButtonStyle.Center"
            android:layout_weight="1"
            android:text="@string/dot" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        style="@style/ButtonStyle.Center"
        android:text="@string/update_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtFee_update"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/fee_hint_add_student" />

        <EditText
            android:id="@+id/edtContact_update"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:inputType="number"
            android:hint="@string/phone_hint" />
        <Button
            android:id="@+id/btnUpdateDetails"
            style="@style/ButtonStyle.Center"
            android:text="@string/update_details_button" />
    </LinearLayout>

</LinearLayout>