<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".LogIn">

    <EditText
        android:id="@+id/edtUserId_LogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/id_admin"
        style="@style/EditTextStyle"
        />

    <EditText
        android:id="@+id/edtPassword_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/EditTextStyle"
        android:text="@string/password_admin"/>

    <Button
        android:onClick="logInToAdmin"
        android:text="@string/log_in"
        style="@style/ButtonStyle.Center"/>

    <Button
        android:id="@+id/biometric_login"
        style="@style/ButtonStyle.Center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use Fingerprint"/>
</LinearLayout>